# sukoshi_ecs

./: README.md  ecs.hpp  sukoshi_ecs.hpp
test/unit/: CMakeLists.txt  test.cpp
